KIT/NNPIA - Cvičení 6 - Automatizované testování - příprava testovacích dat -  Creator TestDataFactory třídy

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 
     runtimeOnly 'com.h2database:h2:'
     testImplementation 'org.codehaus.groovy:groovy'
+    testCompile 'commons-beanutils:commons-beanutils:1.9.4'
+    testCompile 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 test {
