--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     testImplementation 'org.codehaus.groovy:groovy'
     testCompile 'commons-beanutils:commons-beanutils:1.9.4'
     testCompile 'org.apache.commons:commons-lang3:3.12.0'
+
+    testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
 }
 
 test {
